fixed a bug where overflow was caused (#6)

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
     display:block;
     top: 55%;
     left:50%;
-    transform:translate(-50%, -50%) scale(0.7);
+    transform:translate(-50%, -50%) scale(0.5);
 }
 
 .minun__checkbox{
